# RemotePyxecute

./: README.md  setup.cfg
src/remote_pyxecute/: __init__.py  __main__.py  _run.bat  _run_server.bat  api.py  client.py  logger.py  server.py
tests/: remote_pyxecute_test.py
