[metadata]
name = remote_pyxecute-MunkyButt
version = 0.0.1
author = Shea Richardson
author_email = sheaky.206@gmail.com
description = Execute python remotely from another interpreter
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/munkybutt/RemotePyxecute
project_urls =
    Bug Tracker = https://github.com/munkybutt/RemotePyxecute/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src